build: release 26.1.1